<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_constraint_layout"
    android:layout_width="160dp"
    android:layout_height="160dp"
    android:padding="5dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <ImageView
                android:id="@+id/car_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/post_image_side_size"
                android:contentDescription="@string/car_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_car"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/post_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/text_margin"
                android:ellipsize="end"
                android:lines="2"
                android:textSize="@dimen/post_text_size"
                android:paddingHorizontal="@dimen/text_margin"
                android:text="@string/default_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/car_image" />

            <ImageView
                android:id="@+id/like_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/like_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_like"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/post_text" />

            <TextView
                android:id="@+id/number_of_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textSize="@dimen/like_count_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/like_image"
                app:layout_constraintStart_toEndOf="@id/like_image"
                app:layout_constraintTop_toTopOf="@id/like_image"
                tools:text="50" />

            <ImageView
                android:id="@+id/comments_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:contentDescription="@string/like_image"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_comment"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/number_of_likes"
                app:layout_constraintTop_toBottomOf="@id/post_text" />

            <TextView
                android:id="@+id/number_of_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_margin"
                android:textSize="@dimen/like_count_text_size"
                app:layout_constraintBottom_toBottomOf="@+id/comments_image"
                app:layout_constraintStart_toEndOf="@id/comments_image"
                app:layout_constraintTop_toTopOf="@id/comments_image"
                tools:text="50" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</FrameLayout>